# simple_kitting_models

./: CMakeLists.txt  package.xml
launch/: tray_world.launch
models/Block/: model.config  model.sdf
models/Conveyor/: model.config  model.sdf
models/Large_Gear/: model.sdf
models/Large_Gear_Vessel/: model.config  model.sdf
models/Medium_Gear_Vessel/: model.config  model.sdf
models/Metal_Peg_v2/: model.sdf
models/Roller/: model.config  model.sdf
models/Slippery_Mat/: model.config  model.sdf
models/Small_Gear_Vessel/: model.config  model.sdf
src/: SimplifiedContactPlugin.cc  SimplifiedContactPlugin.hh
worlds/: tray.world
